# conjure-freecad

./: .gitignore  README.md  build.sh  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: conjure_engine.py
src/adapter/: __init__.py  freecad_adapter.py  server_client.py
workbench/: Init.py  InitGui.py  conjure.py  logger.py  mcp_server.sh  package.xml
workbench/data/: fasteners.yaml  gears.yaml  materials.yaml  profiles.yaml  sockets.yaml  threads.yaml
workbench/shared/: __init__.py  feedback.py  standards.py
