[project]
name = "conjure-freecad"
version = "0.1.0"
description = "FreeCAD workbench for AI-assisted CAD with Conjure"
readme = "README.md"
license = "MIT"
authors = [{name = "Lautrek", email = "support@lautrek.com"}]
requires-python = ">=3.10"
keywords = ["cad", "freecad", "ai", "3d", "modeling", "conjure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lautrek.com/conjure"
Documentation = "https://lautrek.com/conjure/docs"
Repository = "https://github.com/Lautrek/conjure-freecad"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "workbench"]
